# npp-utils

./: .gitignore  LICENSE  README.md  meson.build  meson.options
core/: meson.build
core/lib/: meson.build
core/lib/npp/: debug.hh  error.hh  hexdump.hh
core/lib/npp/algorithm/: apriori.hh
core/lib/npp/collections/: observable.hh
core/lib/npp/colour/: conv.hh  hsl.hh  hsv.hh  rgb.hh  rgba.hh
core/lib/npp/format/: base64.hh  base85.hh  csv.hh  debug.hh  hexdump.hh  ifprint.hh  json_string.hh  templater.hh
core/lib/npp/io/: file.hh
core/lib/npp/math/: bitwise.hh  fraction.hh
core/lib/npp/program/: arguments.hh
core/lib/npp/string/: diff.hh  enum.hh  split.hh
core/lib/npp/typing/: any_of.hh  duration.hh  functional.hh  null.hh
core/src/: meson.build
core/src/algorithm/: apriori.cc
core/src/colour/: conv.cc  rgb.cc  rgba.cc
core/src/format/: base64.cc  base85.cc  json_string.cc  templater.cc
core/src/io/: file.cc
core/src/math/: bitwise.cc
core/test/: hexdump.cc  meson.build
core/test/algorithm/: apriori.cc
core/test/collections/: observable.cc
core/test/colour/: conv.cc  rgb.cc  rgba.cc
core/test/format/: base64.cc  base85.cc  csv.cc  hexdump.cc  ifprint.cc  json_string.cc  templater.cc
core/test/math/: bitwise.cc  vec2.cc
core/test/string/: diff.cc  enum.cc  join.cc
json/: meson.build
json/lib/: meson.build
json/lib/npp/json/: convert.hh  convert_base.hh  convert_std.hh  reader.hh  select.hh
json/lib/npp/typing/: json.hh
json/src/: meson.build
json/test/: meson.build
json/test/json/: convert_addons.cc  convert_base.cc  reader.cc  select.cc
lib/: meson.build
lib/npp/: hexdump.hh  type_name.hh
lib/npp/collections/: pre_hashed.hh
lib/npp/conv/: core.hh  integer.hh
lib/npp/format/: csv.hh
lib/npp/math/: algebraic_ring.hh  complex.hh  fraction.hh  interval.hh  vec2.hh
lib/npp/memory/: copy_ptr.hh  finally.hh
lib/npp/program/: arguments.hh  environ.hh
lib/npp/string/: diff.hh  join.hh  lazy.hh  lexer.hh  split.hh
lib/npp/system/: procinfo.hh  subprocess.hh
lib/npp/typing/: functional.hh  hashable.hh  map.hh  operators.hh  printable.hh  variant.hh
parser/lib/: meson.build
parser/lib/npp/string/: lexer.hh
parser/src/: meson.build
parser/src/string/: lexer.cc
parser/test/: meson.build
poc/: meson.build
poc/diff/: main.cc  meson.build
poc/procinfo/: main.cc  meson.build
poc/spawn/: main.cc  meson.build
src/: meson.build
src/program/: environ.cc
src/string/: diff.cc  lexer.cc
src/system/: environ.cc  errno.cc  path.cc  subprocess.cc
subprojects/: .gitignore  catch2.wrap  fmt.wrap  nlohmann_json.wrap
test/: meson.build  type_name.cc
test/collections/: pre_hashed.cc
test/conv/: integer.cc
test/math/: complex.cc  fraction.cc  interval.cc  vec2.cc
test/memory/: copy_ptr.cc  finally.cc
test/program/: arguments.cc  environ.cc
test/string/: lazy.cc  lexer.cc  split.cc
test/system/: environ.cc  path.cc
unix/lib/: meson.build
unix/lib/npp/system/: errno.hh  path.hh
unix/src/: meson.build
unix/src/program/: environ.cc
unix/src/system/: subprocess.cc
unix/test/: meson.build
unix/test/system/: errno.cc
